--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ SQLAlchemy==1.4.47
 pytest==6.2.4
 requests==2.25.1
 mysql-connector-python
+werkzeug==2.3.7
 gunicorn==20.1.0
 setuptools>=69.2.0
 pip>=24.0
