--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ Flask-SQLAlchemy==2.5.1
 SQLAlchemy==1.4.47 
 pytest==6.2.4
 requests==2.25.1
-mysql-connector-python
-werkzeug==2.3.7
-gunicorn==20.1.0
+mysql-connector-python==9.0.0
+werkzeug==3.0.3
+gunicorn==21.2.0
 setuptools>=69.2.0
 pip>=24.0
