--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask==2.1.2
-Flask-SQLAlchemy==2.5.1
-SQLAlchemy==1.4.47 
-pytest==6.2.4
-requests==2.25.1
-mysql-connector-python==9.0.0
-werkzeug==3.0.3
-gunicorn==21.2.0
-setuptools>=69.2.0
-pip>=24.0
+Flask
+Flask-SQLAlchemy
+SQLAlchemy
+pytest
+requests
+mysql-connector-python
+werkzeug
+gunicorn
+setuptools
+pip
